# worktree

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SHELL_INTEGRATION.md  TESTING.md  WARP.md  clippy.toml  release.toml
.claude/: settings.local.json
.cursor/: mcp.json
.cursor/rules/: cli-development.mdc  codanna.mdc  code-standards.mdc  configuration-management.mdc  foundry.mdc  git-operations.mdc  project-structure.mdc  rust-conventions.mdc  rust-standards.mdc  testing-conventions.mdc  worktree-development.mdc
.github/workflows/: ci.yml
openspec/changes/archive/2026-03-13-feature-named-worktrees/: design.md  tasks.md
openspec/changes/archive/2026-03-13-feature-named-worktrees/specs/feature-named-worktrees/: spec.md
openspec/changes/archive/2026-03-23-worktree-skill-command/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-23-worktree-skill-command/specs/skill-management/: spec.md
openspec/changes/feature-named-worktrees/: proposal.md
openspec/changes/feature-named-worktrees/specs/config-symlinks/: spec.md
openspec/changes/feature-named-worktrees/specs/post-create-hooks/: spec.md
openspec/specs/config-symlinks/: spec.md
openspec/specs/feature-named-worktrees/: spec.md
openspec/specs/post-create-hooks/: spec.md
openspec/specs/skill-management/: spec.md
src/: lib.rs  main.rs  selection.rs  traits.rs
src/commands/: back.rs  cleanup.rs  create.rs  init.rs  jump.rs  list.rs  mod.rs  remove.rs  skill.rs  status.rs  sync_config.rs
src/config/: mod.rs
src/git/: mod.rs
src/storage/: mod.rs
tests/: back_tests.rs  cleanup_tests.rs  cli_test_helpers.rs  completion_tests.rs  config_tests.rs  create_tests.rs  jump_tests.rs  list_tests.rs  parallel_safety_tests.rs  remove_tests.rs  status_tests.rs  sync_config_tests.rs  test_helpers.rs  workflow_tests.rs
tests/helpers/: patterns.rs  test_env.rs
tests/test-support/: Cargo.toml
tests/test-support/src/: lib.rs  test_env.rs
