[package]
name = "worktree"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
anyhow = "1.0"
glob = "0.3"

[dev-dependencies]
tempfile = "3.8"
temp-env = "0.3"
