[package]
name = "worktree"
version = "0.2.0"
edition = "2024"
description = "A powerful CLI tool for managing git worktrees with enhanced features including centralized storage, automatic config file synchronization, and intelligent branch management"
license = "MIT"
repository = "https://github.com/cafreeman/worktree"
homepage = "https://github.com/cafreeman/worktree"
documentation = "https://github.com/cafreeman/worktree#readme"
readme = "README.md"
keywords = ["git", "worktree", "cli", "development", "branch"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Chris Freeman <cfreeman.code@gmail.com>"]
exclude = [
    "/.claude/",
    "/.codanna/",
    "/.codannaignore",
    "/.cursor/",
    "/.fastembed_cache/",
    "/.github/",
    "/tests/",
    "/.gitignore",
    "/release.toml",
    "/CLAUDE.md",
    "/SHELL_INTEGRATION.md",
]

[[bin]]
name = "worktree-bin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env", "color"] }
clap_complete = "4.4"
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
anyhow = "1.0"
glob = "0.3"
inquire = "0.7"

[dev-dependencies]
tempfile = "3.8"
temp-env = "0.3"
rexpect = "0.5"
assert_fs = "1.1"
predicates = "3.1"
assert_cmd = "2.0"

[lints.clippy]
# Deny common footguns that can cause runtime panics
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "warn"
unimplemented = "warn"

# Performance and efficiency
inefficient_to_string = "warn"
clone_on_ref_ptr = "warn"
large_enum_variant = "warn"

# Code quality and style
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"

# Documentation
missing_docs_in_private_items = "allow" # Can be strict, but often too noisy
missing_errors_doc = "warn"

# Pedantic lints (selective)
must_use_candidate = "warn"
needless_pass_by_value = "warn"
